--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ Primary use:    pxdraft
   color: var(--px-theme-text);
   line-height: 1;
   font-size: 18px;
-  width: 150px;
+  width: 150px !important;
 }
 }
 
