--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ Primary use:    pxdraft
   font-size: 18px;
 }
 
-@media (min-width: 425px) {
+@media (max-width: 425px) {
   .navbar-brand {
   display: -ms-flexbox;
   display: flex;
